<resources>
    <string name="app_name">Space Portal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Forgot Password</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome_text">Welcome to the Portal</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="description_text">Please use your username to retrieve your password</string>
    <string name="get_password">Retrieve Password</string>
    <string name="google_sign_in_button_text">Sign in with Outlook</string>
    <string name="description_text1">Access the system to manage and monitor information easily.</string>
    <string name="description_text2">Secure your account with a quick and easy OTP verification.</string>
    <string name="language_eng">ENG</string>
    <string name="language_vie">VIE</string>
    <string name="new_password_sent_message">New password has been sent to your email.</string>
    <string name="otp_label">OTP Verification</string>
    <string name="otp_send">We will send an OTP to this email:</string>
    <string name="MK">Create New Password</string>
    <string name="congrat">CONGRATULATION</string>
    <string name="text">You have successfully created a new password.</string>
    <string name="send_again">The OTP has not been received? Resend it</string>
    <string name="Logout">Log out</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dash">Dashboard</string>
    <string name="menu_infor">Student Information</string>
    <string name="menu_Noti">Notification</string>
    <string name="menu_score">Score</string>
    <string name="menu_schedule">Class Schedule</string>
    <string name="menu_register">Register for the course</string>
    <string name="menu_tuition">Tuition Fee</string>
    <string name="menu_scholarship">Scholarship</string>
    <string name="menu_request">Request</string>
    <string name="menu_chatbox">Chatbox</string>
    <string name="menu_feedback">App Feedback</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_payment">Payment history</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="statistics">Statistics</string>
    <string name="gpa">GPA</string>
    <string name="view">View</string>
    <string name="semester">Semester</string>
    <string name="school_year">School Year</string>
    <string name="score_filter">Score Filter</string>
    <string name="username_empty">Please enter your username</string>
    <string name="password_empty">Please enter your password</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed. Please check your credentials.</string>
    <string name="year">Year</string>
    <string name="course_code">Course Code</string>
    <string name="subject">Subject</string>
    <string name="credits">Credits</string>
    <string name="class_code">Class Code</string>
    <string name="score10">10-Point</string>
    <string name="score4">4-Point</string>
    <string name="notes">Notes</string>
    <string name="num_credit">Credits</string>
    <string name="num_course">Courses</string>
    <string name="barChart">Chart displaying GPA</string>
    <string name="pieChart">Chart displaying Credits </string>
    <string name="feedback_system_category_title">Category</string>
    <string-array name="feedback_system_category_items">
        <item>Error Report</item>
        <item>Give feedback</item>
    </string-array>
    <string name="market_rank">Rank: %s</string>
    <string name="market_gpa">GPA: %.2f</string>
    <string name="inf1">Overview Chart</string>
    <string name="inf2">Function Categories</string>
    <string name="inf3">Students</string>
    <string name="inf4">Request Transcript</string>
    <string name="inf5">Request Reassessment</string>
    <string name="inf6">Transcript Reassessment</string>
    <string name="inf7">Class Code</string>
    <string name="inf8">Current Grades</string>
    <string name="inf9">Notes</string>
    <string name="inf10">Submit</string>
    <string name="inf11">Exit</string>
    <string name="inf12">Semester</string>
    <string name="inf13">Please select a subject</string>
    <string name="inf14">Please enter the reason for reassessment</string>
    <string name="inf15">Confirm Request</string>
    <string name="inf16">Are you sure you want to submit the grade reassessment request?</string>
    <string name="inf17">Cancel</string>
    <string name="inf18">Confirm</string>
    <string name="inf19">Grade reassessment request submitted successfully</string>
    <string name="inf20">Request Transcript</string>
    <string name="inf21">General Information</string>
    <string name="inf22">Summary</string>
    <string name="inf23">Semester</string>
    <string name="inf24">Academic Year</string>
    <string name="inf25">Year/Semester</string>
    <string name="inf26">Number of Vietnamese copies</string>
    <string name="inf27">Number of English copies</string>
    <string name="inf28">Total Copies</string>
    <string name="inf29">Request Transcript</string>
    <string name="menu_infor1">Student\nInformation</string>
    <string name="menu_register1">Register\nCourses</string>
    <string name="menu_payment1">Payment\nHistory</string>
    <string name="inf30">Timetable</string>
    <string name="inf31">Tuititon Fee</string>
    <string name="inf32">Semester Transcript</string>
    <string name="inf33">Academic Year Transcript</string>
    <string name="inf34">Overall Transcript</string>
    <string name="inf35">Number of Copies</string>
    <string name="inf36">Vietnamese</string>
    <string name="inf37">English</string>
    <string name="inf38">Total Credits</string>
    <string name="inf39">Ratio</string>
    <string name="inf40">Reassessment request submitted successfully</string>
    <string name="inf41">Failed to submit reassessment request</string>
    <string name="inf42">Please select an academic year</string>
    <string name="inf43">Please select an academic year and semester</string>
    <string name="inf44">Please enter the number of transcripts</string>
    <string name="inf45">Transcript request submitted successfully</string>
    <string name="inf46">Failed to submit transcript request</string>
    <string name="total_vn">Number of Vietnamese transcripts: %1$s</string>
    <string name="total_en">Number of English transcripts: %1$s</string>
    <string name="semester_title">Semester/Year: %1$s/%2$s</string>
    <string name="year_title">Academic Year: %1$s</string>
    <string name="inf47">Request</string>
    <string name="inf48">Review</string>
    <string name="inf49">Studied</string>
    <string name="inf50">Remaining</string>
    <string name="inf51">Very Good</string>
    <string name="inf52">Good</string>
    <string name="inf53">Average</string>
    <string name="inf54">Weak</string>
    <string name="inf55">Excellent</string>
    <string name="inf56">User not found</string>
    <string name="inf57">Username not provided</string>
    <string name="inf58">OTP expired</string>
    <string name="inf59">Invalid OTP</string>
    <string name="inf60">Enter your username</string>
    <string name="inf61">OTP sent</string>
    <string name="inf62">Error sending OTP</string>
    <string name="inf63">Time remaining:</string>
    <string name="inf64">Username or reset token not provided</string>
    <string name="inf65">Password cannot be empty</string>
    <string name="inf66">Password must contain at least 8 characters, including uppercase, lowercase and number</string>
    <string name="inf67">Passwords do not match</string>
    <string name="inf68">New password duplicates old password</string>
    <string name="request_reExaminationTitle">ReExamination</string>
    <string name="request_requestForTranscriptTitle">Request for transcript</string>
    <string name="infor_student_frag_student_role">Student</string>
    <string name="infor_student_frag_information_general">General</string>
    <string name="infor_student_frag_information_detail">Detail</string>
    <string name="infor_student_frag_information_contact">Contact</string>
    <string name="infor_student_frag_full_name">Full Name</string>
    <string name="infor_student_frag_id_student">ID Student</string>
    <string name="infor_student_frag_major">Major</string>
    <string name="infor_student_frag_year_of_admission">Year Of Admission</string>
    <string name="infor_student_frag_academic_program">Academic Program</string>
    <string name="infor_student_frag_gender">Gender</string>
    <string name="infor_student_frag_date_of_birth">Date Of Birth</string>
    <string name="infor_student_frag_nationality">Nationality</string>
    <string name="infor_student_frag_ethnicity">Ethnicity</string>
    <string name="infor_student_frag_identity_card_number">Identity Card Number</string>
    <string name="infor_student_frag_email">School Email</string>
    <string name="infor_student_frag_personal_email">Personal Email</string>
    <string name="infor_student_frag_phone_number">Phone Number</string>
    <string name="infor_student_frag_address">Address</string>
    <string name="infor_student_frag_error_mail">Invalid email</string>
    <string name="infor_student_frag_notEmpty">Fields cannot be empty</string>
    <string name="infor_student_frag_error_phoneNumber">Phone number must have exactly 10 digits and cannot contain letters.</string>
    <string name="infor_student_frag_error_alert_dialog">Error</string>
    <string name="infor_student_frag_close_dialog">Close</string>
    <string name="infor_student_frag_upload_avatar">Upload Avatar</string>
    <string name="infor_student_frag_remove_avatar">Remove Avatar</string>
    <string name="infor_student_frag_already_default">The image has reverted to the default.</string>
    <string name="infor_student_frag_change_avatar">Change Avatar</string>
    <string name="schedule_page_choose_semester">Semester</string>
    <string name="notifications">Notifications</string>
    <string name="create_new_password">Create New Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="check_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="menu_reviewfeedback">Review Feedback</string>
    <string name="menu_manage_enrollment_period">Manage Enrollment Period</string>
    <string name="menu_manage_class">Manage Class</string>
    <string name="menu_manage_course">Manage Course</string>
    <string name="menu_manage_semester">Manage Semester</string>
    <string name="menu_manage_student">Manage Student</string>
    <string name="menu_dashboard_admin">Dashboard</string>
    <string name="menu_noti_admin">Notification</string>
    <string name="cancel">Cancel</string>
    <string name="import_excel">Import from Excel</string>
    <string name="select_file">Select File</string>
    <string name="import_excel_description">Please select an Excel file with the required format</string>
    <string name="importFile">Import</string>
</resources>