<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_color"
    >

    <!-- Header -->
    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_password"
        android:textSize="24sp"

        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <!-- Input for Old Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:hint="@string/old_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input for New Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/new_password"
        android:layout_marginTop="6dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input for Confirm Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:hint="@string/check_password"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="6dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>



    <!-- Submit Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submit"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white" />

</LinearLayout>
